syntax = "proto3";

package greet;

option go_package = "github.com/Ruthvik10/grpc-go/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 2;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetMany(GreetRequest) returns (stream GreetResponse);
    rpc LongGreet(stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);
}
